--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -16,6 +16,7 @@ size-transition = true
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
 corner-radius = 6.9; # nice
+# corner-radius = 0.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'Polybar'",
@@ -150,7 +151,7 @@ fade-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.88;
+inactive-opacity = 0.84;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
