--- a/polybar/.config/polybar/colors/gruvbox.ini
+++ b/polybar/.config/polybar/colors/gruvbox.ini
@@ -1,8 +1,8 @@
 [colors]
 bg = #1d2021
-bg2 = #32302f
+lightbg = #32302f
 fg = #d5c4a1
-fg2 = #bcad8f
+fgfaded = #bcad8f
 red = #fb4937
 green = #b8bb26
 yellow = #fabd2f
