--- a/polybar/.config/polybar/styles/simple.ini
+++ b/polybar/.config/polybar/styles/simple.ini
@@ -1,7 +1,7 @@
 [bar/mybar]
 ;monitor = ${env:MONITOR:HDMI-1}
 
-font-0 = Fira Code Nerd Font:pixelsize=8;1
+font-0 = Fira Code Nerd Font Mono:pixelsize=8;1
 
 ;wm-restack = bspwm
 ;wm-restack = i3
@@ -132,7 +132,6 @@ time-alt = "%H:%M:%S "
 
 format-prefix = 
 format-foreground = ${colors.magenta}
-format-background = ${colors.bg2}
 format-underline = ${colors.bg}
 format-overline = ${colors.bg}
 
@@ -235,9 +234,7 @@ exec = ~/.config/polybar/scripts/player-mpris.sh
 interval = 2
 format-prefix = " "
 format-foreground = ${colors.red}
-;click-left = playerctl previous &
-;click-right = playerctl next &
-;click-middle = playerctl play-pause &
+click-left = playerctl play-pause &
 
 [module/weather]
 type = custom/script
