--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # ~/.config/kitty/kitty.conf // Kitty configuration file
 
-include colors/onedark.conf
+include colors/gruvbox.conf
 
 # Font Configuration
 font_family         monospace # specified in ~/.config/fontconfig/fonts.conf
