--- a/polybar/.config/polybar/styles/simple.ini
+++ b/polybar/.config/polybar/styles/simple.ini
@@ -1,7 +1,7 @@
 [bar/mybar]
 ;monitor = ${env:MONITOR:HDMI-1}
 
-font-0 = Fira Code Nerd Font Mono:pixelsize=8;1
+font-0 = Fira Code Nerd Font:pixelsize=8;1
 
 ;wm-restack = bspwm
 ;wm-restack = i3
