fix polybar battery full icon

--- a/polybar/.config/polybar/styles/simple.ini
+++ b/polybar/.config/polybar/styles/simple.ini
@@ -166,7 +166,7 @@ format-charging-foreground = ${colors.green}
 format-discharging = <ramp-capacity> <label-discharging>
 format-discharging-foreground = ${colors.green}
 
-format-full = " 100%"
+format-full =  100%
 format-full-foreground = ${colors.green}
 
 ramp-capacity-0 = 
