--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -7,14 +7,14 @@
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
 #
-shadow = false
-# shadow = true;
+# shadow = false
+shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 shadow-radius = 40;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = .25
+shadow-opacity = .4
 
 # The left offset for shadows, in pixels. (defaults to -15)
 shadow-offset-x = -40
